--- a/thesis.tex
+++ b/thesis.tex
@@ -37,19 +37,19 @@
 %% instead of the SDQ logo
 % \grouplogo{myfile}
 %% Alternatively, you can disable the group logo
-% \nogrouplogo
+\nogrouplogo
 
 %% The reviewers are the professors that grade your thesis
-\reviewerone{Prof. A}
+\reviewerone{Prof. Dr.-Ing. Anne Koziolek}
 \reviewertwo{Prof. B}
 
 %% The advisors are PhDs or Postdocs
-\advisorone{M.Sc. C}
+\advisorone{M.Sc. Dominik Fuchß}
 %% The second advisor can be omitted
 \advisortwo{M.Sc. D}
 
 %% Please enter the start end end time of your thesis
-\editingtime{06. Month 2025}{10. Month 2025}
+\editingtime{06. June 2025}{31. September 2025}
 
 %% Please enter the place of residence of the author. This is used on the declarationpage
 \location{Karlsruhe}
