sighting of provided literature

--- a/01_Proposal/Document/sections/introduction.tex
+++ b/01_Proposal/Document/sections/introduction.tex
@@ -40,7 +40,7 @@ outdated Bib\TeX{} software.
 Please adjust your build environment if necessary (see
 \url{https://sdq.kastel.kit.edu/wiki/BibTeX-Literaturlisten#biblatex.2Fbiber})
 
-A citation: \cite{becker2008a} 
+A citation:~\cite{fuchss2025lissa}
 
 \section{Example: Figures}
 \label{sec:Introduction:Figures}
