--- a/01_Proposal/Document/thesis.bib
+++ b/01_Proposal/Document/thesis.bib
@@ -1,21 +1,57 @@
-@article{becker2008a,
-  author = {Steffen Becker and Heiko Koziolek and Ralf Reussner},
-  title = {{The Palladio Component Model for Model-driven Performance Prediction}},
-  journal = {Journal of Systems and Software},
-  year = {2009},
-  volume = {82},
-  pages = {3--22},
-  doi = {10.1016/j.jss.2008.03.066},
-  publisher = {Elsevier Science Inc.},
-  url = {http://dx.doi.org/10.1016/j.jss.2008.03.066}
+@inproceedings{fuchss2025lissa,
+  title={LiSSA: Toward Generic Traceability Link Recovery through Retrieval-Augmented Generation},
+  author={Fuch{\ss}, Dominik and Hey, Tobias and Keim, Jan and Liu, Haoyu and Ewald, Niklas and Thirolf, Tobias and Koziolek, Anne},
+  booktitle={Proceedings of the IEEE/ACM 47th International Conference on Software Engineering. ICSE},
+  volume={25},
+  year={2025}
 }
 
-@article{mittelbach2014,
-  author = {Frank Mittelbach},
-  title = {How to influence the position of float environments like figure and table in \LaTeX?},
-  journal = {TUGboat},
-  year = {2014},
-  volume = {35},
-  pages = {248--254},
-  url = {https://www.latex-project.org/publications/tb111mitt-float.pdf},
+@article{ramnath2025systematic,
+  title={A Systematic Survey of Automatic Prompt Optimization Techniques},
+  author={Ramnath, Kiran and Zhou, Kang and Guan, Sheng and Mishra, Soumya Smruti and Qi, Xuan and Shen, Zhengyuan and Wang, Shuai and Woo, Sangmin and Jeoung, Sullam and Wang, Yawei and others},
+  journal={arXiv preprint arXiv:2502.16923},
+  year={2025}
+}
+
+@article{pryzant2023automatic,
+  title={Automatic prompt optimization with" gradient descent" and beam search},
+  author={Pryzant, Reid and Iter, Dan and Li, Jerry and Lee, Yin Tat and Zhu, Chenguang and Zeng, Michael},
+  journal={arXiv preprint arXiv:2305.03495},
+  year={2023}
+}
+
+@inproceedings{khattab2024dspy,
+  title={DSPy: Compiling Declarative Language Model Calls into Self-Improving Pipelines},
+  author={Khattab, Omar and Singhvi, Arnav and Maheshwari, Paridhi and Zhang, Zhiyuan and Santhanam, Keshav and Vardhamanan, Sri and Haq, Saiful and Sharma, Ashutosh and Joshi, Thomas T. and Moazam, Hanna and Miller, Heather and Zaharia, Matei and Potts, Christopher},
+  journal={The Twelfth International Conference on Learning Representations},
+  year={2024}
+}
+@article{khattab2022demonstrate,
+  title={Demonstrate-Search-Predict: Composing Retrieval and Language Models for Knowledge-Intensive {NLP}},
+  author={Khattab, Omar and Santhanam, Keshav and Li, Xiang Lisa and Hall, David and Liang, Percy and Potts, Christopher and Zaharia, Matei},
+  journal={arXiv preprint arXiv:2212.14024},
+  year={2022}
+}
+
+@inproceedings{fuchss2022establishing,
+  title={Establishing a benchmark dataset for traceability link recovery between software architecture documentation and models},
+  author={Fuch{\ss}, Dominik and Corallo, Sophie and Keim, Jan and Speit, Janek and Koziolek, Anne},
+  booktitle={European Conference on Software Architecture},
+  pages={455--464},
+  year={2022},
+  organization={Springer}
+}
+
+@dataset{fuchss2022benchmark,
+  author       = {Dominik Fuchß and
+                  Jan Keim and
+                  Sophie Corallo and
+                  Anne Koziolek},
+  title        = {ArDoCo/Benchmark},
+  month        = aug,
+  year         = 2022,
+  publisher    = {Zenodo},
+  version      = {ecsa22-msr4sa},
+  doi          = {10.5281/zenodo.6966832},
+  url          = {https://doi.org/10.5281/zenodo.6966832},
 }
