--- a/01_Proposal/Document/thesis.bib
+++ b/01_Proposal/Document/thesis.bib
@@ -55,3 +55,39 @@
   doi          = {10.5281/zenodo.6966832},
   url          = {https://doi.org/10.5281/zenodo.6966832},
 }
+@inproceedings{zadenoori2025automatic,
+  title={Automatic Prompt Engineering: The Case of Requirements Classification},
+  author={Zadenoori, Mohammad Amin and Zhao, Liping and Alhoshan, Waad and Ferrari, Alessio},
+  booktitle={International Working Conference on Requirements Engineering: Foundation for Software Quality},
+  pages={217--225},
+  year={2025},
+  organization={Springer}
+}
+
+@inproceedings{rodriguez2023prompts,
+  title={Prompts matter: Insights and strategies for prompt engineering in automated software traceability},
+  author={Rodriguez, Alberto D and Dearstyne, Katherine R and Cleland-Huang, Jane},
+  booktitle={2023 IEEE 31st International Requirements Engineering Conference Workshops (REW)},
+  pages={455--464},
+  year={2023},
+  organization={IEEE}
+}
+
+@misc{ye2024promptengineeringpromptengineer,
+  title={Prompt Engineering a Prompt Engineer},
+  author={Qinyuan Ye and Maxamed Axmed and Reid Pryzant and Fereshte Khani},
+  year={2024},
+  eprint={2311.05661},
+  archivePrefix={arXiv},
+  primaryClass={cs.CL},
+  url={https://arxiv.org/abs/2311.05661},
+}
+
+@article{wei2022chain,
+  title={Chain-of-thought prompting elicits reasoning in large language models},
+  author={Wei, Jason and Wang, Xuezhi and Schuurmans, Dale and Bosma, Maarten and Xia, Fei and Chi, Ed and Le, Quoc V and Zhou, Denny and others},
+  journal={Advances in neural information processing systems},
+  volume={35},
+  pages={24824--24837},
+  year={2022}
+}
