--- a/thesis.tex
+++ b/thesis.tex
@@ -46,10 +46,10 @@
 %% The advisors are PhDs or Postdocs
 \advisorone{M.Sc. Dominik Fuchß}
 %% The second advisor can be omitted
-\advisortwo{M.Sc. D}
+\advisortwo{Dr.-Ing. Tobias Hey}
 
 %% Please enter the start end end time of your thesis
-\editingtime{06. June 2025}{31. September 2025}
+\editingtime{16. June 2025}{16. October 2025}
 
 %% Please enter the place of residence of the author. This is used on the declarationpage
 \location{Karlsruhe}
@@ -85,7 +85,7 @@
 %% The Preamble begins here
 \frontmatter
 
-\input{sections/declaration.tex}
+\input{sections/declaration}
 
 \setcounter{page}{1}
 \pagenumbering{roman}
@@ -118,10 +118,10 @@
 
 \mainmatter
 
-\input{sections/introduction.tex}
-\input{sections/content.tex}
-\input{sections/evaluation.tex}
-\input{sections/conclusion.tex}
+\input{sections/introduction}
+\input{sections/content}
+\input{sections/evaluation}
+\input{sections/conclusion}
 
 %% --------------------
 %% |   Bibliography   |
@@ -134,6 +134,6 @@
 %% |   Appendix   |
 %% ----------------
 \appendix
-\input{sections/appendix.tex}
+\input{sections/appendix}
 
 \end{document}
