Update on Overleaf.

--- a/sections/introduction.tex
+++ b/sections/introduction.tex
@@ -86,3 +86,10 @@ f(x)=\Omega(g(x))\ (x\rightarrow\infty)\;\Leftrightarrow\;
 %% --------------------
 %% | /Example content |
 %% --------------------
+
+Artificial intelligence is rapidly changing many fields of study.
+During software development, many artifacts are created, ranging from the actual project code through documentation to a multitude of formal and informal diagrams. The task of trace link recovery is to find instances of the same element across different artifacts. 
+My goal is to improve the rate at which trace links are recovered using prompt engineering. Prompt engineering is the process of refining a prompt for the specific use case. This is usually done in a non systemaic way. In this work I will explore a systematic iterative approach to prompt engineering. 
+
+In previous work by Fuchss et al. %%Todo QUote%%
+simple handwritten prompts were used to recover trace links between software documentation and architectural diagrams. 
