--- a/thesis.tex
+++ b/thesis.tex
@@ -119,8 +119,10 @@
 \mainmatter
 
 \input{sections/introduction}
+\input{sections/concept}
 \input{sections/content}
 \input{sections/evaluation}
+
 \input{sections/conclusion}
 
 %% --------------------
