--- a/thesis.tex
+++ b/thesis.tex
@@ -107,8 +107,8 @@
 %% ------------------------
 %% |   Table of Contents  |
 %% ------------------------
-\tableofcontents
 
+\tableofcontents
 \listoffigures
 \listoftables
 
@@ -120,8 +120,7 @@
 
 \input{sections/introduction}
 \input{sections/concept}
-\input{sections/content}
-\input{sections/evaluation}
+\input{sections/work_plan}
 
 \input{sections/conclusion}
 
@@ -135,7 +134,7 @@
 %% ----------------
 %% |   Appendix   |
 %% ----------------
-\appendix
-\input{sections/appendix}
+%\appendix
+%\input{sections/appendix}
 
 \end{document}
